crates/lang/macro/tests/ui/fail/M-05-message-invalid-selector.stderr
error: expecteded 4-digit hexcode for `selector` argument, e.g. #[ink(selector = 0xC0FEBABE]
  --> $DIR/M-05-message-invalid-selector.rs:14:24
   |
14 |         #[ink(message, selector = true)]
   |                        ^^^^^^^^^^^^^^^
